# TgBotBadWordsCheker

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  DEBUGGING.md  Dockerfile  QUICK_FIX.md  README.md  app.py  bad_words_list.py  docker-compose.yml  logger_config.py  metrics.py  prometheus.yml  pyproject.toml  scheduler.py  services.py
.github/workflows/: ci.yml
database/: db.py  models.py  orm_query.py
handlers/: user_handler.py
tests/: test_swear_checker.py
utils/: swear_checker.py
