[tool.ruff]
line-length = 100
exclude = [".git", ".venv", "venv", "__pycache__", "build", "dist", ".env", ".cache", "poetry.lock"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C90", "UP"]
ignore = ["D100", "D104", "B008"]

[tool.ruff.lint.isort]
combine-as-imports = true
lines-after-imports = 2

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-ra -q --doctest-modules"
[project]
name = "badword-checker"
version = "0.1.4"
description = "This bot can check your chat on swears!"
authors = [
    {name = "Kostya",email = "fesenko.kostya576@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12, <3.15"
dependencies = [
    "aiogram (>=3.27.0,<4.0.0)",
    "sqlalchemy (>=2.0.49,<3.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "pydantic-settings (>=2.0.0,<3.0.0)",
    "apscheduler (>=3.11.2,<4.0.0)",
    "tzdata (>=2026.1,<2027.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff (>=0.15.9,<0.16.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "pre-commit (>=4.5.1,<5.0.0)"
]
